--- a/2-深度学习/人脸识别.md
+++ b/2-深度学习/人脸识别.md
@@ -2,7 +2,7 @@
 ===
 
 
-#### 简介
+# 简介
 
 **人脸验证**（Face Verification）和**人脸识别**（Face Recognition）的区别：
 
@@ -18,7 +18,7 @@
 <!-- more -->
 
 
-#### One-Shot 学习
+# One-Shot 学习
 人脸识别所面临的一个挑战是要求系统只采集某人的一个面部样本，就能快速准确地识别出这个人，即只用一个训练样本来获得准确的预测结果。这被称为**One-Shot 学习**。
 
 有一种方法是假设数据库中存有 N 个人的身份信息，对于每张输入图像，用 Softmax 输出 N+1 种标签，分别对应每个人以及都不是。然而这种方法的实际效果很差，因为过小的训练集不足以训练出一个稳健的神经网络；并且如果有新的身份信息入库，需要重新训练神经网络，不够灵活。
@@ -30,7 +30,7 @@ $$Similarity  = d(img1, img2)$$
 可以设置一个超参数 τ 作为阈值，作为判断两幅图片是否为同一个人的依据。
 
 
-#### Siamese 孪生网络
+# Siamese 孪生网络
 实现 Similarity 函数的一种方式是使用Siamese 网络，它是一种对两个不同输入运行相同的卷积网络，然后对它们的结果进行比较的神经网络。
 
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E4%BA%BA%E8%84%B8%E8%AF%86%E5%88%AB/Siamese.png)
@@ -45,7 +45,7 @@ siamese(孪生) 网络简介：http://blog.csdn.net/qq_15192373/article/details/
 相关论文：[Taigman et al., 2014, DeepFace closing the gap to human level performance](http://www.cs.wayne.edu/~mdong/taigman_cvpr14.pdf)
 
 
-#### Triplet 损失
+# Triplet 损失
 
 **Triplet 损失函数**用于训练出合适的参数，以获得高质量的人脸图像编码。“Triplet”一词来源于训练这个神经网络需要大量包含 Anchor（靶目标）、Positive（正例）、Negative（反例）的图片组，其中 Anchor 和 Positive 需要是同一个人的人脸图像。
 
@@ -74,7 +74,7 @@ $$J = \sum^m_{i=1}L(A^{(i)}, P^{(i)}, N^{(i)})$$
 相关论文：[Schroff et al., 2015, FaceNet: A unified embedding for face recognition and clustering](https://arxiv.org/pdf/1503.03832.pdf)
 
 
-#### 二分类结构
+# 二分类结构
 
 除了 Triplet 损失函数，二分类结构也可用于学习参数以解决人脸识别问题。其做法是输入一对图片，将两个 Siamese 网络产生的特征向量输入至同一个 Sigmoid 单元，输出 1 则表示是识别为同一人，输出 0 则表示识别为不同的人。
 
