--- a/2-深度学习/序列模型与注意力机制.md
+++ b/2-深度学习/序列模型与注意力机制.md
@@ -2,7 +2,7 @@
 ===
 
 
-### Seq2Seq 模型
+# Seq2Seq 模型
 
 **Seq2Seq（Sequence-to-Sequence）**模型能够应用于机器翻译、语音识别等各种序列到序列的转换问题。一个 Seq2Seq 模型包含**编码器（Encoder）**和**解码器（Decoder）**两部分，它们通常是两个不同的 RNN。如下图所示，将编码器的输出作为解码器的输入，由解码器负责输出正确的翻译结果。
 
@@ -25,7 +25,7 @@
 - [Vinyals et. al., 2014. Show and tell: Neural image caption generator](https://arxiv.org/pdf/1411.4555.pdf)
 - [Karpathy and Fei Fei, 2015. Deep visual-semantic alignments for generating image descriptions](https://arxiv.org/pdf/1412.2306.pdf)
 
-#### 选择最可能的句子
+## 选择最可能的句子
 
 机器翻译用到的模型与语言模型相似，只是用编码器的输出作为解码器第一个时间步的输入（而非 0）。因此机器翻译的过程其实相当于建立一个条件语言模型。
 
@@ -36,7 +36,7 @@ $$arg \ max_{y^{⟨1⟩}, ..., y^{⟨T_y⟩}}P(y^{⟨1⟩}, ..., y^{⟨T_y⟩} |
 鉴于贪心搜索算法得到的结果显然难以不符合上述要求，解决此问题最常使用的算法是 **集束搜索（Beam Search）**。
 
 
-### 集束搜索
+# 集束搜索
 
 集束搜索会考虑每个时间步多个可能的选择。设定一个 **集束宽（Bean Width）B**，代表了解码器中每个时间步的预选单词数量。例如 B=3，则将第一个时间步最可能的三个预选单词及其概率值 $P(\hat y^{⟨1⟩}|x)$ 保存到计算机内存，以待后续使用。
 
@@ -56,7 +56,7 @@ $$arg \ max \prod^{T_y}_{t=1} P(\hat y^{⟨t⟩} | x, \hat y^{⟨1⟩}, ..., \ha
 
 
 
-#### 优化：长度标准化
+## 优化：长度标准化
 
 **长度标准化（Length Normalization）**是对集束搜索算法的优化方式。对于公式
 
@@ -74,7 +74,7 @@ $$arg \ max \frac{1}{T_y^{\alpha}} \sum^{T_y}_{t=1} logP(\hat y^{⟨t⟩} | x, \
 
 
 
-#### 误差分析
+## 误差分析
 
 集束搜索是一种启发式搜索算法，其输出结果不总为最优。当结合 Seq2Seq 模型和集束搜索算法所构建的系统出错（没有输出最佳翻译结果）时，我们通过误差分析来分析错误出现在 RNN 模型还是集束搜索算法中。
 
@@ -92,7 +92,7 @@ Algorithm: Jane visited Africa last September. (y∗)
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E8%AE%AD%E7%BB%83%E6%A8%A1%E5%9E%8B%E4%B8%8E%E6%B3%A8%E6%84%8F%E5%8A%9B%E6%9C%BA%E5%88%B6/Error-analysis-process.png)
 
 
-### Bleu 得分
+# Bleu 得分
 
 **Bleu（Bilingual Evaluation Understudy）** 得分用于评估机器翻译的质量，其思想是**机器翻译的结果越接近于人工翻译，则评分越高。**
 
@@ -128,7 +128,7 @@ Bleu 得分的贡献是提出了一个表现不错的**单一实数评估指标*
 相关论文：[neni et. al., 2002. A method for automatic evaluation of machine translation](http://www.aclweb.org/anthology/P02-1040.pdf)
 
 
-### 注意力模型
+# 注意力模型
 
 对于一大段文字，人工翻译一般每次阅读并翻译一小部分。因为难以记忆，很难每次将一大段文字一口气翻译完。同理，用 Seq2Seq 模型建立的翻译系统，对于长句子，Blue 得分会随着输入序列长度的增加而降低。
 
@@ -166,7 +166,7 @@ $$\alpha^{\langle t,t’ \rangle} = \frac{exp(e^{\langle t,t’ \rangle})}{\sum^
 - [Xu et. al., 2015. Show, Attend and Tell: Neural Image Caption Generation with Visual Attention](https://arxiv.org/pdf/1502.03044.pdf)：将注意力模型应用到图像标注中
 
 
-### 语音识别
+# 语音识别
 
 在语音识别任务中，输入是一段以时间为横轴的音频片段，输出是文本。
 
@@ -185,7 +185,7 @@ $$\alpha^{\langle t,t’ \rangle} = \frac{exp(e^{\langle t,t’ \rangle})}{\sum^
 相关论文：[Graves et al., 2006. Connectionist Temporal Classification: Labeling unsegmented sequence data with recurrent neural networks](http://people.idsia.ch/~santiago/papers/icml2006.pdf)
 
 
-### 触发词检测
+# 触发词检测
 
 **触发词检测（Trigger Word Detection）**常用于各种智能设备，通过约定的触发词可以语音唤醒设备。
 
@@ -195,6 +195,6 @@ $$\alpha^{\langle t,t’ \rangle} = \frac{exp(e^{\langle t,t’ \rangle})}{\sum^
 
 
 
-### 代码示例
+# 代码示例
 
 [序列模型和注意力机制](https://github.com/Wasim37/deeplearning-assignment/tree/master/5%20%E5%BA%8F%E5%88%97%E6%A8%A1%E5%9E%8B/Week3%20%E5%BA%8F%E5%88%97%E6%A8%A1%E5%9E%8B%E5%92%8C%E6%B3%A8%E6%84%8F%E5%8A%9B%E6%9C%BA%E5%88%B6)
