--- a/2-深度学习/损失函数和成本函数.md
+++ b/2-深度学习/损失函数和成本函数.md
@@ -5,7 +5,7 @@
 **损失函数针对的是单个样本，代价函数或者成本函数针对的是全体样本。**
 
 
-### 逻辑回归
+# 逻辑回归
 
 Logistic 回归是一个用于二分分类的算法。
 
@@ -50,7 +50,7 @@ http://blog.csdn.net/oldbai001/article/details/49872433
 http://blog.csdn.net/programmer_wei/article/details/52072939
 
 
-### Softmax 回归
+# Softmax 回归
 
 二分类问题，神经网络输出层通常只有一个神经元，表示预测输出 $\hat y$是正类的概率 P(y = 1|x)，$\hat y$ > 0.5 则判断为正类，反之判断为负类。
 
@@ -90,7 +90,7 @@ $$J = \frac{1}{m}\sum^m_{i=1}L(\hat y, y)$$
 
 --- 
 
-### SVM
+# SVM
 
 
-### 神经网络
+# 神经网络
