--- a/2-深度学习/神经风格转移.md
+++ b/2-深度学习/神经风格转移.md
@@ -2,7 +2,7 @@
 ===
 
 
-#### 简介
+# 简介
 
 **神经风格迁移（Neural style transfer）**将参考风格图像的风格“迁移”到另外一张内容图像中，生成具有其特色的图像。
 
@@ -15,7 +15,7 @@
 <!-- more -->
 
 
-#### 深度卷积网络在学什么？
+# 深度卷积网络在学什么？
 
 想要理解如何实现神经风格转换，首先要理解在输入图像数据后，一个深度卷积网络从中都学到了些什么。我们借助可视化来做到这一点。
 
@@ -26,7 +26,7 @@
 相关论文：[Zeiler and Fergus., 2013, Visualizing and understanding convolutional networks](https://arxiv.org/pdf/1311.2901.pdf)
 
 
-#### 代价函数
+# 代价函数
 
 神经风格迁移生成图片 G 的代价函数如下：
 
@@ -42,7 +42,7 @@ $$J(G) = \alpha \cdot J_{content}(C, G) + \beta \cdot J_{style}(S, G)$$
 相关论文：[Gatys al., 2015. A neural algorithm of artistic style](https://arxiv.org/pdf/1508.06576v2.pdf)
 
 
-#### 内容代价函数
+# 内容代价函数
 
 上述代价函数包含一个内容代价部分和风格代价部分。我们先来讨论内容代价函数 $J_{content}(C, G)$，它表示内容图片 C 和生成图片 G 之间的相似度。
 
@@ -57,7 +57,7 @@ $$J_{content}(C, G) = \frac{1}{2}||(a^{(C)[l]} - a^{(G)[l]})||^2$$
 $a^{(C)[l]}$ 和 $a^{(G)[l]}$ 越相似，则 $J_{content}(C, G)$ 越小。
 
 
-#### 风格代价函数
+# 风格代价函数
 
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E7%A5%9E%E7%BB%8F%E9%A3%8E%E6%A0%BC%E8%BD%AC%E7%A7%BB/Intuition-about-style-of-an-image.png)
 
@@ -84,7 +84,7 @@ $$J_{style}(S, G) = \sum_l \lambda^{[l]} J^{[l]}_{style}(S, G)$$
 其中，$lambda$ 是用于设置不同层所占权重的超参数。
 
 
-#### 推广至一维和三维
+# 推广至一维和三维
 
 之前我们处理的都是二维图片，实际上卷积也可以延伸到一维和三维数据。我们举两个示例来说明。
 
