--- a/2-深度学习/卷积操作详解（填充、步长、高维卷积、卷积公式）.md
+++ b/2-深度学习/卷积操作详解（填充、步长、高维卷积、卷积公式）.md
@@ -6,10 +6,8 @@
 
 ![卷积](http://7xvfir.com1.z0.glb.clouddn.com/%E5%8D%B7%E7%A7%AF%E7%BD%91%E7%BB%9C%E7%9A%84%E8%BE%B9%E7%BC%98%E6%A3%80%E6%B5%8B/4.png)
 
-<!-- more -->
 
-
-### 填充
+# 填充
 
 假设输入图片的大小为 **n×n**，而滤波器的大小为 **f×f**，则卷积后的输出图片大小为 **(n−f+1)×(n−f+1)**。
 
@@ -32,7 +30,7 @@
 在计算机视觉领域，f通常为奇数。原因包括 Same 卷积中 $p = \frac{f-1}{2}$ 能得到自然数结果，并且滤波器有一个便于表示其所在位置的中心点。
 
 
-### 卷积步长
+# 卷积步长
 
 卷积过程中，有时需要通过填充来避免信息损失，有时也需要通过设置**步长（Stride）**来压缩一部分信息。
 
@@ -50,7 +48,7 @@ $$\biggl\lfloor \frac{n+2p-f}{s}+1   \biggr\rfloor \times \biggl\lfloor \frac{n+
 
 
 
-### 高维卷积
+# 高维卷积
 如果我们想要对三通道的 RGB 图片进行卷积运算，那么其对应的滤波器组也同样是三通道的。过程是将每个单通道（R，G，B）与对应的滤波器进行卷积运算求和，然后再将三个通道的和相加，将 27 个乘积的和作为输出图片的一个像素值。
 
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0%E7%9F%A5%E8%AF%86%E7%82%B9%E9%9B%86%E9%94%A6/Convolutions-on-RGB-image.png)
@@ -66,7 +64,7 @@ $$\biggl\lfloor \frac{n+2p-f}{s}+1   \biggr\rfloor \times \biggl\lfloor \frac{n+
 </video>
 
 
-### 单层卷积网络
+# 单层卷积网络
 
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0%E7%9F%A5%E8%AF%86%E7%82%B9%E9%9B%86%E9%94%A6/One-Layer-of-a-Convolutional-Network.jpg)
 
@@ -80,7 +78,7 @@ $$A^{[l]} = g^{[l]}(Z^{[l]})$$
 
 
 
-### 符号总结
+# 符号总结
 设 $l$ 层为卷积层：
 
 - $f^{[l]}$：滤波器的高（或宽）
