--- a/2-深度学习/循环训练模型.md
+++ b/2-深度学习/循环训练模型.md
@@ -2,7 +2,7 @@
 ===
 
 
-#### 前言
+# 前言
 
 自然语言和音频都是前后相互关联的数据，对于这些序列数据需要使用**循环神经网络（Recurrent Neural Network，RNN）**来进行处理。
 
@@ -10,10 +10,8 @@
 
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E5%BE%AA%E7%8E%AF%E8%AE%AD%E7%BB%83%E6%A8%A1%E5%9E%8B/20180424212312_Examples-of-Sequence-Model.png)
 
-<!-- more -->
 
-
-#### 数学符号
+# 数学符号
 
 对于一个序列数据 $x$ ，用符号 $x^{⟨t⟩}$ 来表示这个数据中的第 $t$ 个元素，用 $y^{⟨t⟩}$ 来表示第 $t$ 个标签，用 $T_x$ 和 $T_y$ 来表示输入和输出的长度。对于一段音频，元素可能是其中的几帧；对于一句话，元素可能是一到多个单词。
 
@@ -30,7 +28,7 @@ $$w^{zebra} = \left [ 0, 0, 0, ..., 1\right ]^T$$
 $$(w^{hotel})^Tw^{motel} = (w^{hotel})^Tw^{cat} = 0$$
 
 
-#### 循环神经网络模型
+# 循环神经网络模型
 
 **RNN 的目的是用来处理序列数据**。在传统的神经网络模型中，是从输入层到隐含层再到输出层，层与层之间是全连接的，每层之间的节点是无连接的。但是这种普通的神经网络对于很多问题却无能无力。
 
@@ -65,7 +63,7 @@ $$(w^{hotel})^Tw^{motel} = (w^{hotel})^Tw^{cat} = 0$$
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E5%BE%AA%E7%8E%AF%E8%AE%AD%E7%BB%83%E6%A8%A1%E5%9E%8B/20180425095414.png)
 
 
-#### RNN反向传播
+# RNN反向传播
 
 为了计算反向传播过程，需要先定义一个损失函数。单个位置上（或者说单个时间步上）某个单词的预测值的损失函数采用 **交叉熵损失函数**，如下所示：
 
@@ -84,14 +82,14 @@ $$J = L(\hat y, y) = \sum^{T_x}_{t=1} L^{⟨t⟩}(\hat y^{⟨t⟩}, y^{⟨t⟩})
 ![反向传播](http://7xvfir.com1.z0.glb.clouddn.com/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0/%E5%8F%8D%E5%90%91%E4%BC%A0%E6%92%AD.png)
 
 
-#### 不同结构
+# 不同结构
 
 某些情况下，输入长度和输出长度不一致。根据所需的输入及输出长度，循环神经网络可分为“一对一”、“多对一”、“多对多”等结构：
 
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E5%BE%AA%E7%8E%AF%E8%AE%AD%E7%BB%83%E6%A8%A1%E5%9E%8B/Examples-of-RNN-architectures.png)
 
 
-#### 语言模型
+# 语言模型
 
 **语言模型**（Language Model）是**根据语言客观事实而进行的语言抽象数学建模，能够估计某个序列中各<font color="red">元素出现的可能性</font>**。例如，在一个语音识别系统中，语言模型能够计算两个读音相近的句子为正确结果的概率，以此为依据作出准确判断。
 
@@ -114,7 +112,7 @@ $$L(\hat y^{⟨t⟩}, y^{⟨t⟩}) = -\sum_t y_i^{⟨t⟩} log \hat y^{⟨t⟩}$
 $$J = \sum_t L^{⟨t⟩}(\hat y^{⟨t⟩}, y^{⟨t⟩})$$
 
 
-#### 采样
+# 采样
 
 在训练好一个语言模型后，可以通过 **采样（Sample）** 新的序列来了解这个模型中都学习到了一些什么。
 
@@ -125,7 +123,7 @@ $$J = \sum_t L^{⟨t⟩}(\hat y^{⟨t⟩}, y^{⟨t⟩})$$
 这里建立的是基于词汇构建的语言模型。根据需要也可以构建基于字符的语言模型，其优点是不必担心出现未知标识（UNK），其缺点是得到的序列过多过长，并且训练成本高昂。因此，基于词汇构建的语言模型更为常用。
 
 
-#### RNN 的梯度消失
+# RNN 的梯度消失
 
 The cat,which already ate a bunch of food, was full.
 The cats,which already ate a bunch of food, were full.
@@ -135,7 +133,7 @@ The cats,which already ate a bunch of food, were full.
 在反向传播时，随着层数的增多，梯度不仅可能指数型下降，也有可能指数型上升，即梯度爆炸。不过 **梯度爆炸** 比较容易发现，因为参数会急剧膨胀到数值溢出（可能显示为 NaN）。这时**可以采用梯度修剪（Gradient Clipping）来解决**：观察梯度向量，如果它大于某个阈值，则缩放梯度向量以保证其不会太大。相比之下，**梯度消失问题更难解决**。<font color="red">LSTM 和 GRU 的设计就是为了解决长期依赖问题，都可以作为缓解梯度消失问题的方案</font>。
 
 
-#### GRU（门控循环单元）
+# GRU（门控循环单元）
 
 **GRU（Gated Recurrent Units, 门控循环单元）**改善了 RNN 的隐藏层，使其可以更好地捕捉深层连接，并改善了梯度消失问题。
 
@@ -157,7 +155,7 @@ The cat,which already ate a bunch of food, was full.
 - [Chung et al., 2014. Empirical Evaluation of Gated Recurrent Neural Networks on Sequence Modeling](https://arxiv.org/pdf/1412.3555.pdf)
 
 
-#### LSTM（长短期记忆）
+# LSTM（长短期记忆）
 
 **LSTM（Long Short Term Memory，长短期记忆）**网络比 GRU 更加灵活和强大，它额外引入了**遗忘门（Forget Gate）** $Γ_f$和输出门（Output Gate） $Γ_o$。公式如下：
 
@@ -174,7 +172,7 @@ The cat,which already ate a bunch of food, was full.
 相关论文：[Hochreiter & Schmidhuber 1997. Long short-term memory](https://www.researchgate.net/publication/13853244_Long_Short-term_Memory)
 
 
-#### 双向循环神经网络（BRNN）
+# 双向循环神经网络（BRNN）
 
 单向的循环神经网络在某一时刻的预测结果只能使用之前输入的序列信息。**双向循环神经网络（Bidirectional RNN，BRNN）**可以在序列的任意位置使用之前和之后的数据。其工作原理是增加一个反向循环层，结构如下图所示：
 
@@ -187,7 +185,7 @@ $$y^{⟨t⟩} = g(W_y[\overrightarrow a^{⟨t⟩},  \overleftarrow a^{⟨t⟩}] 
 这个改进的方法不仅能用于基本的 RNN，也可以用于 GRU 或 LSTM。**缺点** 是需要完整的序列数据，才能预测任意位置的结果。例如构建语音识别系统，需要等待用户说完并获取整个语音表达，才能处理这段语音并进一步做语音识别。因此，实际应用会有更加复杂的模块。
 
 
-#### 深度循环神经网络（DRNN)
+# 深度循环神经网络（DRNN)
 循环神经网络的每个时间步上也可以包含多个隐藏层，形成**深度循环神经网络（Deep RNN)**。结构如下图所示：
 
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E5%BE%AA%E7%8E%AF%E8%AE%AD%E7%BB%83%E6%A8%A1%E5%9E%8B/DRNN.png)
@@ -196,6 +194,6 @@ $$y^{⟨t⟩} = g(W_y[\overrightarrow a^{⟨t⟩},  \overleftarrow a^{⟨t⟩}] 
 
 
 
-### 代码示例
+# 代码示例
 
 [循环序列模型](https://github.com/Wasim37/deeplearning-assignment/tree/master/5%20%E5%BA%8F%E5%88%97%E6%A8%A1%E5%9E%8B/Week1%20%E5%BE%AA%E7%8E%AF%E5%BA%8F%E5%88%97%E6%A8%A1%E5%9E%8B)
