--- a/1-机器学习/8-隐马尔科夫模型.md
+++ b/1-机器学习/8-隐马尔科夫模型.md
@@ -11,7 +11,7 @@ Index
 
 <!-- /TOC -->
 
-### <h2 id="马尔科夫相关知识整理">贝叶斯网络、马尔科夫网络、EM、条件随机场、最大熵模型的联系</h2>
+# <h2 id="马尔科夫相关知识整理">贝叶斯网络、马尔科夫网络、EM、条件随机场、最大熵模型的联系</h2>
 
 
 
