--- a/1-机器学习/机器学习开发策略.md
+++ b/1-机器学习/机器学习开发策略.md
@@ -1,11 +1,10 @@
 机器学习开发策略
 ===
 
----
 
 吴大大结构化机器学习项目总结，完善中...
 
-### ML策略
+# ML策略
 
 假设你构建了一个喵咪分类器，训练之后准确率达到90%，但在测试集上还不够好。此时你可以想到的优化方法有哪些呢？总结后大致如下：
 - 收集更多的数据
@@ -21,11 +20,8 @@
 优化的方法虽然很多，但如果方向错误，可能白费几个月时间。
 **那通过哪些策略可以减少错误发生的几率呢？怎么判断哪些方法可以尝试，哪些方法可以丢弃呢？**
 
-<!-- more -->
 
----
-
-### 正交化 Orthogonalization
+# 正交化 Orthogonalization
 
 优化前首先需要明白正交化。教科书式定义（可以直接略过 =。=）：正交化是一种系统设计属性，它确保修改指令或算法的组成部分不会对系统的其他组件产生或传播副作用。独立地验证某部分而不对其他部分产生影响，能有效减少测试和开发时间。
 
@@ -45,9 +41,8 @@
 **我们需要使用正交化的思想去分析系统的瓶颈究竟出自哪一个方面，当系统表现不佳时，哪些旋钮是值得去尝试的。<font color='red'>尝试过程中需要训练网络，吴大大在这特意提到，他自己训练神经网络时通常不会提前停止网络训练，因为这会让问题的分析复杂化。比如提前停止训练集的训练，它在影响训练集的拟合的同时会改善开发集的表现，这样问题就不正交化了。<font>**
 
 
----
 
-### 单一数字评估指标 Single number evaluation metric
+# 单一数字评估指标 Single number evaluation metric
 
 **当我们知道模型在哪个集合拟合不好时，我们就有了优化的方向。无论是调整超参数，还是尝试更好的优化算法，为了更好更快的重新评估模型，我们都需要为问题设置一个单一的数字评估指标。**
 
@@ -85,9 +80,8 @@ $vF1-Socre = \dfrac {2} {\dfrac{1}{p}+\dfrac{1}{r}}$
 
 模型在各个地区有不同的表现，这里用地区的平均值来对模型效果进行评估，转换为单一数字评估指标，就可以很容易的得出表现最好的模型。
 
----
 
-### 满足和优化指标
+# 满足和优化指标
 **有时候把我们所有顾及的事情组成单一数字评估指标并不容易。这个时候，可以尝试把指标划分为满足指标和优化指标。**
 
 比如现在有三个不同的分类器性能表现如下：
@@ -104,9 +98,8 @@ N_{metric}-1\qquad Satisificing\ metric
 \end{array} \right.
 $$
 
----
 
-### 训练/开发/测试集划分
+# 训练/开发/测试集划分
 
 **确立了评估指标，就是确定了靶心，团队拿到数据就可以快速迭代不断逼近指标。这个时候正确的数据集的划分就非常重要了，它直接关乎你的团队效率。**
 
@@ -120,9 +113,8 @@ $$
 
 **<font color='red'>所以数据要随机洗牌，然后放到训练、开发和测试集中。其次，这些随机洗牌的数据的来源也需要注意，即你选择的数据集，要能反应出你未来希望得到的数据，即模型数据要和未来数据相似，这样模型在生产环境中面对新的数据才能有好的表现。</font>**
 
----
 
-### 开发集和测试集的大小
+# 开发集和测试集的大小
 
 机器学习发展到现在，数据集的划分与传统稍有不同。具体详情见下图：
 
@@ -130,9 +122,8 @@ $$
 
 **<font color='red'>开发集有时候需要足够大才能评估不同的想法，至于测试集的量，除非你对最终投产的系统有非常高的精准指标，否则一般情况下，1W的数据量足够。注意测试集的划分不再需要按照传统占据30%，以现在的数据量，30%很可能超过百万。</font>**
 
----
 
-### 什么时候该改变开发集/测试集和指标
+# 什么时候该改变开发集/测试集和指标
 
 在针对某一问题我们设置开发集和评估指标后，这就像把目标定在某个位置，后面的过程就聚焦在该位置上。但有时候在这个项目的过程中，可能会发现目标的位置设置错了，所以要移动改变我们的目标。
 
@@ -181,9 +172,8 @@ Guideline：
 - 定义正确的评估指标来更好的给分类器的好坏进行排序；
 - 优化评估指标。
 
----
 
-### 比较人类表现水平
+# 比较人类表现水平
 很多机器学习模型的诞生是为了取代人类的工作，因此其表现也会跟人类表现水平作比较。
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%BC%80%E5%8F%91%E7%AD%96%E7%95%A5/11.png)
 
@@ -197,18 +187,16 @@ Guideline：
 
 当模型的表现超过人类后，这些手段起的作用就微乎其微了。
 
----
 
-### 可避免偏差
+# 可避免偏差
 通过与贝叶斯最优误差，或者说，与人类表现水平的比较，可以表明一个机器学习模型表现的好坏程度，由此判断后续操作应该注重于减小偏差还是减小方差。
 
 模型在**训练集**上的误差与人类表现水平的差值被称作**可避免偏差**（Avoidable Bias）。可避免偏差低便意味着模型在训练集上的表现很好，而**训练集与验证集之间错误率的差值越小**，意味着模型在验证集与测试集上的表现和训练集同样好。
 
 如果**可避免偏差大于训练集与验证集之间错误率的差值**，之后的工作就应该专注于减小偏差；反之，就应该专注于减小方差。
 
----
 
-### 理解人类表现水平
+# 理解人类表现水平
 **我们一般用人类水平误差（Human-level Error）来代表贝叶斯最优误差（或者简称贝叶斯误差）**。对于不同领域的例子，不同人群由于其经验水平不一，错误率也不同。一般来说，**我们将表现最好的作为人类水平误差**。但是实际应用中，不同人选择人类水平误差的基准是不同的，这会带来一定的影响。
 
 例如，如果某模型在训练集上的错误率为 0.7%，验证集的错误率为 0.8%。如果选择的人类水平误差为 0.5%，那么偏差（bias）比方差（variance）更加突出；而如果选择的人类水平误差为 0.7%，则方差更加突出。也就是说，根据人类水平误差的不同选择，我们可能因此选择不同的优化操作。
@@ -217,9 +205,8 @@ Guideline：
 
 当机器学习模型的表现超过了人类水平误差时，很难再通过人的直觉去判断模型还能够往什么方向优化以提高性能。
 
----
 
-### 总结
+# 总结
 想让一个监督学习算法达到使用程度，应该做到以下两点：
 1）算法对训练集的拟合很好，可以看作可避免偏差很低；
 2）推广到验证集和测试集效果也很好，即方差不是很大。
