--- a/1-机器学习/2-决策树、随机森林和提升算法.md
+++ b/1-机器学习/2-决策树、随机森林和提升算法.md
@@ -5,7 +5,6 @@ Index
 ---
 <!-- TOC -->
 
-### 决策树
 - [示例代码](https://github.com/Wasim37/machine_learning_code/tree/master/03%20%E5%86%B3%E7%AD%96%E6%A0%91%20Decision%20Tree)
 - [信息熵、联合熵、条件熵、相对熵、互信息的定义](#信息熵、联合熵、条件熵、相对熵、互信息的定义)
 - [什么是最大熵](#什么是最大熵)
@@ -16,9 +15,6 @@ Index
 - [剪枝](#剪枝)
 - [决策树优化策略](#决策树优化策略)
 - [决策树总结](#决策树总结)
-
-
-### 相关链接
 - [集成方法 bootstrap, boosting, bagging 简介](http://www.csuldw.com/2015/07/22/2015-07-22%20%20ensemble/)
 - [提升算法 Adboost、GBDT、Xgboost 简介](https://www.cnblogs.com/willnote/p/6801496.html)
 - [GBDT简介](http://www.cnblogs.com/hudongni1/p/5511491.html)
@@ -28,8 +24,6 @@ Index
 - [怎么理解决策树、xgboost能处理缺失值？而有的模型(svm)对缺失值比较敏感](https://www.zhihu.com/question/58230411)
 - [决策树如何处理不完整数据](https://www.zhihu.com/question/34867991?sort=created)
 - [怎么理解决策树、xgboost能处理缺失值而有的模型svm对缺失值比较敏感](https://www.zhihu.com/question/58230411)
-
-
 - [随机森林如何处理缺失值](#随机森林如何处理缺失值)
 - [随机森林如何评估特征重要性](#随机森林如何评估特征重要性)
 - [为什么xgboost要用泰勒展开，优势在哪里](#为什么xgboost要用泰勒展开，优势在哪里)
@@ -38,7 +32,7 @@ Index
 
 <!-- /TOC -->
 
-### <h2 id="信息熵、联合熵、条件熵、相对熵、互信息的定义">信息熵、联合熵、条件熵、相对熵、互信息的定义</h2>
+# <h2 id="信息熵、联合熵、条件熵、相对熵、互信息的定义">信息熵、联合熵、条件熵、相对熵、互信息的定义</h2>
 
 下面的截图截自宗成庆的《统计自然语言处理 》：
 
@@ -50,7 +44,7 @@ Index
 ![困惑度](http://7xvfir.com1.z0.glb.clouddn.com/%E5%90%84%E7%A7%8D%E7%86%B5%E5%85%AC%E5%BC%8F/6.png)
 
 
-### <h2 id="什么是最大熵">什么是最大熵</h2>
+# <h2 id="什么是最大熵">什么是最大熵</h2>
 
 
 熵是随机变量不确定性的度量，不确定性越大，熵值越大；若随机变量退化成定值，熵为0。
@@ -61,7 +55,7 @@ Index
 例如，投掷一个骰子，如果问"每个面朝上的概率分别是多少"，你会说是等概率，即各点出现的概率均为1/6。因为对这个"一无所知"的色子，什么都不确定，而假定它每一个朝上概率均等则是最合理的做法。从投资的角度来看，这是风险最小的做法，而从信息论的角度讲，就是保留了最大的不确定性，也就是说让熵达到最大。
 
 
-### <h2 id="什么是决策树">什么是决策树</h2>
+# <h2 id="什么是决策树">什么是决策树</h2>
 
 决策树(Decision Tree)是在**已知各种情况发生概率**的基础上，通过构建决策树来进行分析的一种方式，是一种直观应用概率分析的一种图解法；决策树是一种预测模型，代表的是对象属性与对象值之间的映射关系；决策树是一种树形结构，其中每个内部节点表示一个属性的测试，每个分支表示一个测试输出，每个叶节点代表一种类别；决策树是一种非常常用的有监督的分类算法。
 
@@ -72,7 +66,7 @@ Index
 ![](http://7xvfir.com1.z0.glb.clouddn.com/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%9F%A5%E8%AF%86%E7%82%B9%E9%9B%86%E9%94%A6/20180130224416.png)
 
 
-### <h2 id="决策树构建过程">决策树构建过程</h2>
+# <h2 id="决策树构建过程">决策树构建过程</h2>
 
 顾名思义，决策树就是用一棵树来表示我们的整个决策过程。这棵树可以是二叉树（比如 CART 只能是二叉树），也可以是多叉树（比如 ID3、C4.5 可以是多叉树或二叉树）。
 
@@ -101,7 +95,7 @@ Index
 决策树算法是一种**贪心**算法策略，只考虑在当前数据特征情况下的最好分割方式，不能进行回溯操作。
 
 
-### <h2 id="决策树的纯度">决策树的纯度</h2>
+# <h2 id="决策树的纯度">决策树的纯度</h2>
 
 子集越纯，子集中待分类的项就越可能属于同一个类别。
 
@@ -115,7 +109,7 @@ Gain为A为特征对训练数据集D的信息增益，它为集合D的经验熵H
 
 --- 
 
-### <h2 id="ID3、C4.5、CART介绍">ID3、C4.5、CART介绍</h2>
+# <h2 id="ID3、C4.5、CART介绍">ID3、C4.5、CART介绍</h2>
 
 > 这三个是非常著名的决策树算法。简单粗暴来说，ID3 使用 **信息增益** 作为选择特征的准则；C4.5 使用 **信息增益率** 作为选择特征的准则；CART 使用 **Gini 系数** 作为选择特征的准则。
 
@@ -189,7 +183,7 @@ Gini 指数表示集合的不确定性，或者是不纯度。基尼指数越大
 - Gini 指数更偏向于连续属性，熵更偏向于离散属性。
 
 
-### <h2 id="剪枝">剪枝</h2>
+# <h2 id="剪枝">剪枝</h2>
 
 决策树算法很容易过拟合（overfitting），剪枝算法就是用来防止决策树过拟合，提高泛华性能的方法。
 
@@ -202,7 +196,7 @@ Gini 指数表示集合的不确定性，或者是不纯度。基尼指数越大
 那么怎么来判断是否带来泛化性能的提升那？最简单的就是留出法，即预留一部分数据作为验证集来进行性能评估。
 
 
-### <h2 id="决策树优化策略">决策树优化策略</h2>
+# <h2 id="决策树优化策略">决策树优化策略</h2>
 - 剪枝优化
 决策树过度拟合一般情况是由于节点太多导致的，剪枝优化对决策树的正确率影响比较大。
 
@@ -213,7 +207,7 @@ Gini 指数表示集合的不确定性，或者是不纯度。基尼指数越大
 利用训练数据随机产生多个决策树，形成一个森林。然后使用这个森林对数据进行预测，选取最多结果作为预测结果。
 
 
-### <h2 id="决策树总结">决策树总结</h2>
+# <h2 id="决策树总结">决策树总结</h2>
 决策树算法主要包括三个部分：特征选择、树的生成、树的剪枝。常用算法有 ID3、C4.5、CART。
 
 - 特征选择。特征选择的目的是选取能够对训练集分类的特征。特征选择的关键是准则：信息增益、信息增益比、Gini 指数；
@@ -221,26 +215,26 @@ Gini 指数表示集合的不确定性，或者是不纯度。基尼指数越大
 - 决策树的剪枝。决策树的剪枝是为了防止树的过拟合，增强其泛化能力。包括预剪枝和后剪枝。
 
 
-### <h2 id="随机森林如何处理缺失值">随机森林如何处理缺失值</h2>
+# <h2 id="随机森林如何处理缺失值">随机森林如何处理缺失值</h2>
 
 方法一（na.roughfix）简单粗暴，对于训练集，同一个class下的数据，如果是分类变量缺失，用众数补上，如果是连续型变量缺失，用中位数补。
 
 方法二（rfImpute）这个方法计算量大，至于比方法一好坏不好判断。先用na.roughfix补上缺失值，然后构建森林并计算proximity matrix，再回头看缺失值，如果是分类变量，则用没有缺失的观测实例的proximity中的权重进行投票。如果是连续型变量，则用proximity矩阵进行加权平均的方法补缺失值。然后迭代4-6次，这个补缺失值的思想和KNN有些类似12。
 
 
-### <h2 id="随机森林如何评估特征重要性">随机森林如何评估特征重要性</h2>
+# <h2 id="随机森林如何评估特征重要性">随机森林如何评估特征重要性</h2>
 
 衡量变量重要性的方法有两种，Decrease GINI 和 Decrease Accuracy：
 1) Decrease GINI： 对于回归问题，直接使用argmax(VarVarLeftVarRight)作为评判标准，即当前节点训练集的方差Var减去左节点的方差VarLeft和右节点的方差VarRight。
 2) Decrease Accuracy：对于一棵树Tb(x)，我们用OOB样本可以得到测试误差1；然后随机改变OOB样本的第j列：保持其他列不变，对第j列进行随机的上下置换，得到误差2。至此，我们可以用误差1-误差2来刻画变量j的重要性。基本思想就是，如果一个变量j足够重要，那么改变它会极大的增加测试误差；反之，如果改变它测试误差没有增大，则说明该变量不是那么的重要。
 
 
-### <h2 id="为什么xgboost要用泰勒展开，优势在哪里">为什么xgboost要用泰勒展开，优势在哪里</h2>
+# <h2 id="为什么xgboost要用泰勒展开，优势在哪里">为什么xgboost要用泰勒展开，优势在哪里</h2>
 
 xgboost使用了一阶和二阶偏导， 二阶导数有利于梯度下降的更快更准. 使用泰勒展开取得函数做自变量的二阶导数形式， 可以在不选定损失函数具体形式的情况下， 仅仅依靠输入数据的值就可以进行叶子分裂优化计算， 本质上也就把损失函数的选取和模型算法优化/参数选择分开了. 这种去耦合增加了xgboost的适用性， 使得它按需选取损失函数， 可以用于分类， 也可以用于回归。
 
 
-### <h2 id="xgboost如何寻找最优特征，是有放回还是无放回">xgboost如何寻找最优特征，是有放回还是无放回</h2>
+# <h2 id="xgboost如何寻找最优特征，是有放回还是无放回">xgboost如何寻找最优特征，是有放回还是无放回</h2>
 
 xgboost在训练的过程中给出各个特征的增益评分，最大增益的特征会被选出来作为分裂依据， 从而记忆了每个特征对在模型训练时的重要性 -- 从根到叶子中间节点涉及某特征的次数作为该特征重要性排序.
 xgboost属于boosting集成学习方法， 样本是不放回的， 因而每轮计算样本不重复. 另一方面， xgboost支持子采样， 也就是每轮计算可以不使用全部样本， 以减少过拟合. 进一步地， xgboost 还有列采样， 每轮计算按百分比随机采样一部分特征， 既提高计算速度又减少过拟合。
