--- a/1-机器学习/2-决策树、随机森林和提升算法.md
+++ b/1-机器学习/2-决策树、随机森林和提升算法.md
@@ -5,7 +5,7 @@ Index
 ---
 <!-- TOC -->
 
-- [示例代码](https://github.com/Wasim37/machine_learning_code/tree/master/03%20%E5%86%B3%E7%AD%96%E6%A0%91%20Decision%20Tree)
+- [示例代码](https://github.com/Wasim37/machine_learning_code/tree/master/03 决策树 Decision Tree)
 - [信息熵、联合熵、条件熵、相对熵、互信息的定义](#信息熵、联合熵、条件熵、相对熵、互信息的定义)
 - [什么是最大熵](#什么是最大熵)
 - [什么是决策树](#什么是决策树)
@@ -15,7 +15,7 @@ Index
 - [剪枝](#剪枝)
 - [决策树优化策略](#决策树优化策略)
 - [决策树总结](#决策树总结)
-- [集成方法 bootstrap, boosting, bagging 简介](http://www.csuldw.com/2015/07/22/2015-07-22%20%20ensemble/)
+- [集成方法 bootstrap, boosting, bagging 简介](http://www.csuldw.com/2015/07/22/2015-07-22  ensemble/)
 - [提升算法 Adboost、GBDT、Xgboost 简介](https://www.cnblogs.com/willnote/p/6801496.html)
 - [GBDT简介](http://www.cnblogs.com/hudongni1/p/5511491.html)
 - [从回归树到GBDT](http://www.flynote.cn/2017/04/blog-post_11.html)
@@ -36,12 +36,12 @@ Index
 
 下面的截图截自宗成庆的《统计自然语言处理 》：
 
-![熵](http://7xvfir.com1.z0.glb.clouddn.com/%E5%90%84%E7%A7%8D%E7%86%B5%E5%85%AC%E5%BC%8F/1.png)
-![联合熵与条件熵](http://7xvfir.com1.z0.glb.clouddn.com/%E5%90%84%E7%A7%8D%E7%86%B5%E5%85%AC%E5%BC%8F/2.png)
-![互信息](http://7xvfir.com1.z0.glb.clouddn.com/%E5%90%84%E7%A7%8D%E7%86%B5%E5%85%AC%E5%BC%8F/3.png)
-![相对熵](http://7xvfir.com1.z0.glb.clouddn.com/%E5%90%84%E7%A7%8D%E7%86%B5%E5%85%AC%E5%BC%8F/4.png)
-![交叉熵](http://7xvfir.com1.z0.glb.clouddn.com/%E5%90%84%E7%A7%8D%E7%86%B5%E5%85%AC%E5%BC%8F/5.png)
-![困惑度](http://7xvfir.com1.z0.glb.clouddn.com/%E5%90%84%E7%A7%8D%E7%86%B5%E5%85%AC%E5%BC%8F/6.png)
+![熵](http://7xvfir.com1.z0.glb.clouddn.com/各种熵公式/1.png)
+![联合熵与条件熵](http://7xvfir.com1.z0.glb.clouddn.com/各种熵公式/2.png)
+![互信息](http://7xvfir.com1.z0.glb.clouddn.com/各种熵公式/3.png)
+![相对熵](http://7xvfir.com1.z0.glb.clouddn.com/各种熵公式/4.png)
+![交叉熵](http://7xvfir.com1.z0.glb.clouddn.com/各种熵公式/5.png)
+![困惑度](http://7xvfir.com1.z0.glb.clouddn.com/各种熵公式/6.png)
 
 
 # <h2 id="什么是最大熵">什么是最大熵</h2>
@@ -63,7 +63,7 @@ Index
 
 决策树分为两大类：分类树和回归树，前者用于分类标签值，后者用于预测连续值，常用算法有ID3、C4.5、CART等
 
-![](http://7xvfir.com1.z0.glb.clouddn.com/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%9F%A5%E8%AF%86%E7%82%B9%E9%9B%86%E9%94%A6/20180130224416.png)
+![](http://7xvfir.com1.z0.glb.clouddn.com/机器学习知识点集锦/20180130224416.png)
 
 
 # <h2 id="决策树构建过程">决策树构建过程</h2>
@@ -100,11 +100,11 @@ Index
 子集越纯，子集中待分类的项就越可能属于同一个类别。
 
 决策树的构建是基于样本概率和纯度进行构建操作的，那么进行**判断数据集是否"纯"可以通过三个公式进行判断，分别是Gini系数、熵(Entropy)、错误率**，这三个公式值越大，表示数据越"不纯"；越小表示越"纯"；实践证明这三种公式效果差不多，一般情况使用熵公式。
-![](http://7xvfir.com1.z0.glb.clouddn.com/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%9F%A5%E8%AF%86%E7%82%B9%E9%9B%86%E9%94%A6/20180130230731.png)
+![](http://7xvfir.com1.z0.glb.clouddn.com/机器学习知识点集锦/20180130230731.png)
  
 根据熵公式计算出各个特征属性的量化纯度值后，使用 **信息增益度** 来选择出当前数据集的分割特征属性；
 如果信息增益度的值越大，表示在该特征属性上会损失纯度越大，就越应该在决策树的上层。计算公式为：
-![](http://7xvfir.com1.z0.glb.clouddn.com/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%9F%A5%E8%AF%86%E7%82%B9%E9%9B%86%E9%94%A6/20180130231908.png)
+![](http://7xvfir.com1.z0.glb.clouddn.com/机器学习知识点集锦/20180130231908.png)
 Gain为A为特征对训练数据集D的信息增益，它为集合D的经验熵H(D)与特征A给定条件下D的经验条件熵H(D/A)之差.
 
 --- 
