--- a/1-机器学习/8-隐马尔科夫模型.md
+++ b/1-机器学习/8-隐马尔科夫模型.md
@@ -6,7 +6,7 @@ Index
 <!-- TOC -->
 
 
-- [示例代码](https://github.com/Wasim37/machine_learning_code/tree/master/09%20%E9%9A%90%E9%A9%AC%E5%B0%94%E7%A7%91%E5%A4%AB)
+- [示例代码](https://github.com/Wasim37/machine_learning_code/tree/master/09 隐马尔科夫)
 - [贝叶斯网络、马尔科夫网络、EM、条件随机场、最大熵模型的联系](#马尔科夫相关知识整理)
 
 <!-- /TOC -->
