--- a/2-深度学习/卷积操作详解（填充、步长、高维卷积、卷积公式）.md
+++ b/2-深度学习/卷积操作详解（填充、步长、高维卷积、卷积公式）.md
@@ -4,7 +4,7 @@
 
 **对图像**（不同的数据窗口数据）**和滤波矩阵**（一组固定的权重：因为每个神经元的多个权重固定，所以又可以看做一个恒定的滤波器filter）**做内积**（逐个元素相乘再求和）**的操作就是所谓的『卷积』操作**，也是卷积神经网络的名字来源。
 
-![卷积](http://7xvfir.com1.z0.glb.clouddn.com/卷积网络的边缘检测/4.png)
+![卷积](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/卷积网络的边缘检测/4.png)
 
 
 # 填充
@@ -18,7 +18,7 @@
 
 为了解决这些问题，可以在进行卷积操作前，对原始图片在边界上进行**填充（Padding）**，以增加矩阵的大小。通常将 0 作为填充值。
 
-![](http://7xvfir.com1.z0.glb.clouddn.com/深度学习知识点集锦/Padding.jpg)
+![](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/深度学习知识点集锦/Padding.jpg)
 
 设每个方向扩展像素点数量为 p，则填充后原始图片的大小为 **(n+2p)×(n+2p)$，滤波器大小保持 $f×f$不变，则输出图片大小为 $(n+2p−f+1)×(n+2p−f+1)$。
 
@@ -36,7 +36,7 @@
 
 步长表示滤波器在原始图片的水平方向和垂直方向上每次移动的距离。之前，步长被默认为 1。而如果我们设置步长为 2，则卷积过程如下图所示：
 
-![](http://7xvfir.com1.z0.glb.clouddn.com/深度学习知识点集锦/Stride.jpg)
+![](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/深度学习知识点集锦/Stride.jpg)
 
 设步长为 s，填充长度为 p，输入图片大小为 n×n，滤波器大小为 f×f，则卷积后图片的尺寸为：
 
@@ -51,22 +51,22 @@ $$\biggl\lfloor \frac{n+2p-f}{s}+1   \biggr\rfloor \times \biggl\lfloor \frac{n+
 # 高维卷积
 如果我们想要对三通道的 RGB 图片进行卷积运算，那么其对应的滤波器组也同样是三通道的。过程是将每个单通道（R，G，B）与对应的滤波器进行卷积运算求和，然后再将三个通道的和相加，将 27 个乘积的和作为输出图片的一个像素值。
 
-![](http://7xvfir.com1.z0.glb.clouddn.com/深度学习知识点集锦/Convolutions-on-RGB-image.png)
+![](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/深度学习知识点集锦/Convolutions-on-RGB-image.png)
 
 不同通道的滤波器可以不相同。例如只检测 R 通道的垂直边缘，G 通道和 B 通道不进行边缘检测，则 G 通道和 B 通道的滤波器全部置零。**当输入有特定的高、宽和通道数时，滤波器可以有不同的高和宽，<font color="red">但通道数必须和输入一致</font>**。
 
 如果想同时检测垂直和水平边缘，或者更多的边缘检测，可以增加更多的滤波器组。例如设置第一个滤波器组实现垂直边缘检测，第二个滤波器组实现水平边缘检测。设输入图片的尺寸为 $n×n×nc$（nc为通道数），滤波器尺寸为 $f×f×nc$，则卷积后的输出图片尺寸为 $(n−f+1)×(n−f+1)×n′c$，$n′c$为滤波器组的个数。
 
-![](http://7xvfir.com1.z0.glb.clouddn.com/深度学习知识点集锦/More-Filters.jpg)
+![](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/深度学习知识点集锦/More-Filters.jpg)
 
-<video id="video" width='621'  controls="" preload="none" poster="http://7xvfir.com1.z0.glb.clouddn.com/深度学习知识点集锦/conv_kiank.png">
-<source id="mp4"  src="http://7xvfir.com1.z0.glb.clouddn.com/深度学习知识点集锦/conv_kiank.mp4" type="video/mp4">
+<video id="video" width='621'  controls="" preload="none" poster="http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/深度学习知识点集锦/conv_kiank.png">
+<source id="mp4"  src="http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/深度学习知识点集锦/conv_kiank.mp4" type="video/mp4">
 </video>
 
 
 # 单层卷积网络
 
-![](http://7xvfir.com1.z0.glb.clouddn.com/深度学习知识点集锦/One-Layer-of-a-Convolutional-Network.jpg)
+![](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/深度学习知识点集锦/One-Layer-of-a-Convolutional-Network.jpg)
 
 与之前的卷积过程相比较，**卷积神经网络的单层结构多了激活函数和偏移量**；而与标准神经网络：
 
