--- a/1-机器学习/8-隐马尔科夫模型.md
+++ b/1-机器学习/8-隐马尔科夫模型.md
@@ -44,9 +44,9 @@ Index
 - **条件随机场**与最大熵模型都是指数模型，CRF的求解借鉴了最大熵的思想
 - 只要可以转换为 **序列标注** 的问题，都可以用HMM、CRF和 MEMM（最大熵隐马尔科夫模型）解决
 
-![概率图模型演变](http://7xvfir.com1.z0.glb.clouddn.com/HMM/自然语言处理概率图模型的演变.png)
-![马尔科夫链与马尔科夫模型](http://7xvfir.com1.z0.glb.clouddn.com/HMM/马尔科夫模型.png)
-![马尔科夫随机场（概率无向图模型）](http://7xvfir.com1.z0.glb.clouddn.com/HMM/马尔科夫随机场.png)
-![条件随机场](http://7xvfir.com1.z0.glb.clouddn.com/HMM/条件随机场.png)
-![线性链条件随机场](http://7xvfir.com1.z0.glb.clouddn.com/HMM/线性链条件随机场.png)
-![隐马尔科夫的三个基本问题](http://7xvfir.com1.z0.glb.clouddn.com/HMM/隐马尔科夫的三个基本问题.png)
+![概率图模型演变](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/HMM/自然语言处理概率图模型的演变.png)
+![马尔科夫链与马尔科夫模型](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/HMM/马尔科夫模型.png)
+![马尔科夫随机场（概率无向图模型）](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/HMM/马尔科夫随机场.png)
+![条件随机场](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/HMM/条件随机场.png)
+![线性链条件随机场](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/HMM/线性链条件随机场.png)
+![隐马尔科夫的三个基本问题](http://hexo-blog-wasim.oss-cn-shenzhen.aliyuncs.com/HMM/隐马尔科夫的三个基本问题.png)
